# tibiantis-bot-scraper

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.junie/: guidelines.md
alembic/: env.py
app/: dependencies.py  main.py
app/core/: config.py  database.py
app/models/: __init__.py  bedmage_timer.py  blacklist.py  character.py  deathlist.py
app/routers/: bedmage_timer.py  blacklist.py  character.py
app/schemas/: bedmage_timer.py  blacklist.py  character.py  deathlist.py
app/services/: bedmage_timer.py  blacklist.py  character.py  deathlist.py  discord_notifer.py  online_checker.py  scheduler.py  scraper.py
